sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Industry_Assessment_Exclude__mdt/SFDC_Industry_Assessment_Exclude__mdt.object-meta.xml
<CustomObject>
    <description>Exclude assessment question answer options based on saved values from previous answers</description>
    <label>SFDC Industry Assessment Exclude</label>
    <pluralLabel>SFDC Industry Assessment Excludes</pluralLabel>
</CustomObject>