sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Industry_Assessment_Exclude__mdt/fields/Controlling_Field__c.field-meta.xml
<CustomField>
    <fullName>Controlling_Field__c</fullName>
    <label>Controlling Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>