sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Industry_Assessment_Exclude__mdt/fields/Exclude_Value__c.field-meta.xml
<CustomField>
    <fullName>Exclude_Value__c</fullName>
    <label>Exclude Value</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>