sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Industry_Assessment_Exclude__mdt/fields/SFDC_Industry_Assessment_Question__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Industry_Assessment_Question__c</fullName>
    <label>SFDC Industry Assessment Question</label>
    <referenceTo>SFDC_Industry_Assessment_Question__mdt</referenceTo>
    <relationshipLabel>SFDC Industry Assessment Excludes</relationshipLabel>
    <relationshipName>SFDC_Industry_Assessment_Excludes</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>